--- a/Index.html
+++ b/Index.html
@@ -1738,16 +1738,11 @@
                                 <div>OLIPT2 - Integrative Programming</div>
                                 <div>Room: B1.28</div>
                             </div>
-                        </div>
+</div>
                         <div class="schedule-day">
                             <div class="day-header">Sunday</div>
-                            <div class="schedule-item">
-                                <div class="schedule-time">3:00PM - 4:30PM</div>
-                                <div>OLITPRAC 1 - Practicum</div>
-                            </div>
-                            <div class="schedule-item">
-                                <div class="schedule-time">4:30PM - 6:00PM</div>
-                                <div>OLITPRAC 2 - Practicum</div>
+<div class="schedule-time">No Classes</div>
+
                             </div>
                         </div>
                     </div>
@@ -1769,7 +1764,7 @@
                             <thead>
                                 <tr>
                                     <th>School Year</th>
-                                    <th>Term</th>
+                                    <th>Year</th>
                                     <th>Subject</th>
                                     <th>Professor</th>
                                     <th>Prelim</th>
