--- a/Index.html
+++ b/Index.html
@@ -1738,11 +1738,11 @@
                                 <div>OLIPT2 - Integrative Programming</div>
                                 <div>Room: B1.28</div>
                             </div>
-</div>
+                        </div>
                         <div class="schedule-day">
                             <div class="day-header">Sunday</div>
-<div class="schedule-time">No Classes</div>
-
+                            <div class="schedule-item">
+                                <div class="schedule-time">No Classes</div>
                             </div>
                         </div>
                     </div>
